# FastApiPet

./: main.py  pyproject.toml  scemas.py
db/: database.py  db_post.py  db_user.py  hash.py  models.py
routers/: blogs.py  posts.py  users.py
