[tool.poetry]
name = "fastapicourse"
version = "0.1.0"
description = ""
authors = ["Viachelav Lisovoi <viacheslav.lisovoi@onix-systems.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
SQLAlchemy = "^2.0.15"
psycopg2-binary = "^2.9.6"
passlib = "^1.7.4"
bcrypt = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
